editors/tree-sitter-lisette/grammar.js
    source_file: $ => seq(optional($.shebang), repeat($._statement)),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    expression_statement: $ => choice(
      seq($._expression, $._semicolon),
      prec(1, $._expression_ending_with_block),
    ),

    _declaration_statement: $ => choice(
      $.const_item,
      $.empty_statement,
      $.attribute_item,
      $.struct_item,
      $.enum_item,
      $.type_item,
      $.function_item,
      $.function_signature_item,
      $.impl_item,
      $.interface_item,
      $.let_declaration,
      $.var_declaration,
      $.import_declaration,
      $.defer_statement,
      $.task_statement,
      $.assert_statement,
    ),

    // Attributes

    attribute_item: $ => seq(
      '#',
      '[',
      $.attribute,
      ']',
    ),

    attribute: $ => seq(
      field('name', $.identifier),
      optional(field('arguments', $.attribute_arguments)),
    ),

    attribute_arguments: $ => parenList($._attribute_arg),

    _attribute_arg: $ => choice(
      $.identifier,                           // flag: omitempty, snake_case
      $.string_literal,                       // string: "fieldName"
      $.backtick_literal,                     // raw: `validate:"required"`
      seq('!', $.identifier),                 // negated flag: !omitempty
    ),

    // Imports

    import_declaration: $ => seq(
      'import',
      optional(field('alias', choice(
        $.identifier,
        '_',
      ))),
      field('path', $.string_literal),
      $._semicolon,
    ),

    // Declarations

    struct_item: $ => seq(
      optional($.visibility_modifier),
      'struct',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      choice(
        field('body', $.field_declaration_list),
        field('body', $.ordered_field_declaration_list),
      ),
    ),

    enum_item: $ => seq(
      optional($.visibility_modifier),
      'enum',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('body', $.enum_variant_list),
    ),

    enum_variant_list: $ => bracedList(seq(
      repeat($.attribute_item), optional($.doc_comment), $.enum_variant,
    )),

    enum_variant: $ => seq(
      field('name', $.identifier),
      field('body', optional(choice(
        $.field_declaration_list,
        $.ordered_field_declaration_list,
      ))),
    ),

    field_declaration_list: $ => bracedList(seq(
      repeat($.attribute_item),
      optional($.doc_comment),
      choice($.field_declaration, $.struct_embedding),
    )),

    struct_embedding: $ => seq(
      'embed',
      field('type', $._type),
    ),

    field_declaration: $ => seq(
      optional($.visibility_modifier),
      field('name', choice(
        $._field_identifier,
        alias('embed', $.field_identifier),
      )),
      ':',
      field('type', $._type),
    ),

    ordered_field_declaration_list: $ => parenList(seq(
      repeat($.attribute_item),
      optional($.visibility_modifier),
      field('type', $._type),
    )),

    const_item: $ => seq(
      optional($.visibility_modifier),
      'const',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      $._semicolon,
    ),

    var_declaration: $ => seq(
      optional($.visibility_modifier),
      'var',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      $._semicolon,
    ),

    type_item: $ => seq(
      optional($.visibility_modifier),
      'type',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      optional(seq('=', field('type', $._type))),
      $._semicolon,
    ),

    function_item: $ => seq(
      optional($.visibility_modifier),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    function_signature_item: $ => seq(
      optional($.visibility_modifier),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      $._semicolon,
    ),

    impl_item: $ => seq(
      'impl',
      field('type_parameters', optional($.type_parameters)),
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
        $.generic_type,
        $.writable_type,
      )),
      field('body', $.declaration_list),
    ),

    interface_item: $ => seq(
      optional($.visibility_modifier),
      'interface',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('body', $.interface_body),
    ),

    interface_body: $ => seq(
      '{',
      repeat(seq(
        repeat($.attribute_item),
        choice(
          $.function_signature_item,
          $.interface_embedding,
        ),
      )),
      '}',
    ),

    interface_embedding: $ => seq(
      'embed',
      field('interface', $._type),
      $._semicolon,
    ),

    declaration_list: $ => seq(
      '{',
      repeat($._declaration_statement),
      '}',
    ),

    // Parameters

    parameters: $ => parenList(seq(
      optional($.attribute_item),
      choice(
        $.parameter,
        $.self_parameter,
        '_',
      ),
    )),

    self_parameter: $ => 'self',

    parameter: $ => seq(
      field('pattern', choice(
        $._pattern,
        'self',
      )),
      ':',
      field('type', $._type),
    ),

    visibility_modifier: _ => 'pub',

    mutable_specifier: _ => 'mut',

    // Type parameters

    _type: $ => choice(
      $.writable_type,
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      $._type_identifier,
      $.never_type,
    ),

    generic_type: $ => prec(1, seq(
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('type_arguments', $.type_arguments),
    )),

    type_arguments: $ => prec(-1, seq(
      '<',
      sepBy1(',', choice(
        $._type,
        $._literal,
      )),
      optional(','),
      '>',
    )),

    _expression_except_range: $ => choice(
      $.unary_expression,
      $.reference_expression,
      $.try_expression,
      $.binary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.type_cast_expression,
      $.call_expression,
      $.generic_call_expression,
      $.return_expression,
      $._literal,
      prec.left($.identifier),
      $.self,
      $.field_expression,
      $.slice_expression,
      $.tuple_expression,
      $.unit_expression,
      $.break_expression,
      $.continue_expression,
      $.index_expression,
      $.closure_expression,
      $.parenthesized_expression,
      $.struct_expression,
      $.deref_expression,
      $.rawgo_directive,
      $._expression_ending_with_block,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    _expression_ending_with_block: $ => choice(
      $.block,
      $.if_expression,
      $.if_let_expression,
      $.match_expression,
      $.while_expression,
      $.while_let_expression,
      $.loop_expression,
      $.for_expression,
      $.select_expression,
      $.try_block,
      $.recover_block,
    ),

    // Binary / unary / postfix expressions

    binary_expression: $ => {
      const table = [
        [PREC.pipeline, '|>'],
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.comparative, choice('==', '!=', '<=', '>=')],
        [PREC.additive, choice('+', '-', '|', '^')],
        [PREC.multiplicative, choice('*', '/', '%', '<<', '>>', '&', '&^')],
      ];

      return choice(
        // @ts-ignore
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '<'),
          field('right', $._expression),
        )),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '>'),
          field('right', $._expression),
        )),
      );
    },

    return_expression: $ => choice(
      prec.left(seq('return', $._expression)),
      prec(-1, 'return'),
    ),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression_except_range),
      field('arguments', $.arguments),
    )),

    arguments: $ => parenList(choice($._expression, $.spread_argument)),

    struct_expression: $ => seq(
      field('name', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('body', $.field_initializer_list),
    ),

    field_initializer_list: $ => bracedList(choice(
      $.shorthand_field_initializer,
      $.field_initializer,
      $.base_field_initializer,
      $.zero_fill_initializer,
    )),

    field_initializer: $ => seq(
      field('field', choice($._field_identifier, $.integer_literal)),
      ':',
      field('value', $._expression),
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    // Let / var

    let_declaration: $ => seq(
      'let',
      optional('assert'),
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(seq(
        'else',
        field('alternative', $.block),
      )),
      $._semicolon,
    ),

    // Directives

    _pattern: $ => choice(
      $._literal_pattern,
      $.identifier,
      $.scoped_type_identifier,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $.slice_pattern,
      $.or_pattern,
      $.as_binding_pattern,
      $.remaining_field_pattern,
      '_',
    ),

    tuple_struct_pattern: $ => seq(
      field('type', choice(
        $.identifier,
        $.scoped_type_identifier,
      )),
      parenList($._pattern),
    ),

    _literal: $ => choice(
      $.string_literal,
      $.raw_string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.float_literal,
      $.imaginary_literal,
      $.format_string,
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      token.immediate('"'),
    ),

    file_comment: _ => token(prec(1, seq('//!', /.*/))),

    // `immediate` pins byte 0, and the class is the interpreter the compiler needs.
    shebang: _ => token.immediate(/#![^\[\r\n][^\r\n]*/),

    // Identifiers

    // @ts-ignore — tree-sitter handles Unicode properties natively
    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
  },
});
