editors/tree-sitter-lisette/test/corpus/declarations.txt
================================================================================
Simple let binding
================================================================================

let x = 42

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Let with type annotation
================================================================================

let x: int = 42

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (type_identifier)
    value: (integer_literal)))

================================================================================
Mutable let
================================================================================

let mut x = 0

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    (mutable_specifier)
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Let-else
================================================================================

let Some(x) = opt else { return }

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (tuple_struct_pattern
      type: (identifier)
      (identifier))
    value: (identifier)
    alternative: (block
      (return_expression))))

================================================================================
Let-assert
================================================================================

let assert Ok(x) = result

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (tuple_struct_pattern
      type: (identifier)
      (identifier))
    value: (identifier)))

================================================================================
Const
================================================================================

const MAX: int = 100

--------------------------------------------------------------------------------

(source_file
  (const_item
    name: (identifier)
    type: (type_identifier)
    value: (integer_literal)))

================================================================================
Var
================================================================================

var counter: int

--------------------------------------------------------------------------------

(source_file
  (var_declaration
    name: (identifier)
    type: (type_identifier)))

================================================================================
Function
================================================================================

fn add(a: int, b: int) -> int { a + b }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (type_identifier))
      (parameter
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (binary_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Pub function
================================================================================

pub fn greet() { hello() }

--------------------------------------------------------------------------------

(source_file
  (function_item
    (visibility_modifier)
    name: (identifier)
    parameters: (parameters)
    body: (block
      (call_expression
        function: (identifier)
        arguments: (arguments)))))

================================================================================
Struct with fields
================================================================================

struct Point { x: int, y: int }

--------------------------------------------------------------------------------

(source_file
  (struct_item
    name: (type_identifier)
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier)
        type: (type_identifier))
      (field_declaration
        name: (field_identifier)
        type: (type_identifier)))))

================================================================================
Tuple struct
================================================================================

struct Pair(int, int)

--------------------------------------------------------------------------------

(source_file
  (struct_item
    name: (type_identifier)
    body: (ordered_field_declaration_list
      type: (type_identifier)
      type: (type_identifier))))

================================================================================
Enum (ADT)
================================================================================

enum Option { Some(int), None }

--------------------------------------------------------------------------------

(source_file
  (enum_item
    name: (type_identifier)
    body: (enum_variant_list
      (enum_variant
        name: (identifier)
        body: (ordered_field_declaration_list
          type: (type_identifier)))
      (enum_variant
        name: (identifier)))))

================================================================================
Interface
================================================================================

interface Reader { fn read(self) -> int; }

--------------------------------------------------------------------------------

(source_file
  (interface_item
    name: (type_identifier)
    body: (interface_body
      (function_signature_item
        name: (identifier)
        parameters: (parameters
          (self_parameter))
        return_type: (type_identifier)))))

================================================================================
Interface embedding
================================================================================

interface ReadWriter { embed Reader; embed Writer; fn flush(self) -> int; }

--------------------------------------------------------------------------------

(source_file
  (interface_item
    name: (type_identifier)
    body: (interface_body
      (interface_embedding
        interface: (type_identifier))
      (interface_embedding
        interface: (type_identifier))
      (function_signature_item
        name: (identifier)
        parameters: (parameters
          (self_parameter))
        return_type: (type_identifier)))))

================================================================================
Impl block
================================================================================

impl Point { fn new() -> Point { Point { x: 0, y: 0 } } }

--------------------------------------------------------------------------------

(source_file
  (impl_item
    type: (type_identifier)
    body: (declaration_list
      (function_item
        name: (identifier)
        parameters: (parameters)
        return_type: (type_identifier)
        body: (block
          (struct_expression
            name: (type_identifier)
            body: (field_initializer_list
              (field_initializer
                field: (field_identifier)
                value: (integer_literal))
              (field_initializer
                field: (field_identifier)
                value: (integer_literal)))))))))

================================================================================
Type alias
================================================================================

type ID = int

--------------------------------------------------------------------------------

(source_file
  (type_item
    name: (type_identifier)
    type: (type_identifier)))

================================================================================
Import
================================================================================

import "go:fmt"

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (string_literal
      (string_content))))

================================================================================
Import with alias
================================================================================

import m "models"

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    alias: (identifier)
    path: (string_literal
      (string_content))))

================================================================================
Blank import
================================================================================

import _ "go:net/http/pprof"

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    path: (string_literal
      (string_content))))

================================================================================
Struct with embedded fields
================================================================================

struct ReadWriter {
  embed Ref<Reader>,
  embed base,
  pub size: int,
}

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (type_identifier)
    (field_declaration_list
      (struct_embedding
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier))))
      (struct_embedding
        (type_identifier))
      (field_declaration
        (visibility_modifier)
        (field_identifier)
        (type_identifier)))))

================================================================================
Interface with attribute on method
================================================================================

interface Sealed {
  fn Do() -> int
  #[go(unexported, "pkg.private()")]
  fn private()
}

--------------------------------------------------------------------------------

(source_file
  (interface_item
    (type_identifier)
    (interface_body
      (function_signature_item
        (identifier)
        (parameters)
        (type_identifier))
      (attribute_item
        (attribute
          (identifier)
          (attribute_arguments
            (identifier)
            (string_literal
              (string_content)))))
      (function_signature_item
        (identifier)
        (parameters)))))

================================================================================
Field named embed
================================================================================

struct S {
  embed: int,
}

--------------------------------------------------------------------------------

(source_file
  (struct_item
    (type_identifier)
    (field_declaration_list
      (field_declaration
        (field_identifier)
        (type_identifier)))))

================================================================================
File comment
================================================================================

//! Copyright 2026 Acme Corp.
//! SPDX-License-Identifier: Apache-2.0

fn main() {}

--------------------------------------------------------------------------------

(source_file
  (file_comment)
  (file_comment)
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
Shebang
================================================================================
#!/usr/bin/env -S lis run

fn main() {}

--------------------------------------------------------------------------------

(source_file
  (shebang)
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
Shebang above a file comment
================================================================================
#!/usr/bin/env -S lis run
//! A tool.

fn main() {}

--------------------------------------------------------------------------------

(source_file
  (shebang)
  (file_comment)
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
Inner attribute is not a shebang
================================================================================

#![foo]
fn main() {}

--------------------------------------------------------------------------------

(source_file
  (attribute_item
    (ERROR)
    (attribute
      name: (identifier)))
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
Bare shebang names no interpreter, so it is not a shebang
================================================================================
#!
fn main() {}

--------------------------------------------------------------------------------

(source_file
  (ERROR)
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block)))

================================================================================
Shebang below byte zero is not a shebang
================================================================================

fn main() {}
#!x

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (ERROR)
  (expression_statement
    (identifier)))

================================================================================
Parameter marker is not a permission
================================================================================

fn sort(mut items: Slice<int>) { }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (ERROR
        (identifier))
      (parameter
        pattern: (identifier)
        type: (generic_type
          type: (type_identifier)
          type_arguments: (type_arguments
            (type_identifier)))))
    body: (block)))

================================================================================
Receiver marker is not a permission
================================================================================

impl Counter {
  fn bump(mut self) { }
}

--------------------------------------------------------------------------------

(source_file
  (impl_item
    type: (type_identifier)
    body: (declaration_list
      (function_item
        name: (identifier)
        parameters: (parameters
          (ERROR
            (identifier))
          (self_parameter))
        body: (block)))))
